tests/ui/cve_2021_25904/cve_2021_25904.stderr
error: it is unsound to trust pointers from passed-in iterators in a public safe function
  --> tests/ui/cve_2021_25904/cve_2021_25904.rs:440:50
   |
LL |     pub fn copy_from_raw_parts<I, IU>(&mut self, mut src: I, mut src_linesize: IU)
   |                                                  ^^^^^^^
...
LL |                 let rr = src.next().unwrap();
   |                          ------------------- pointer created here
...
LL |                 let ss = unsafe { slice::from_raw_parts(rr, hb * s_linesize) };
   |                                   ------------------------------------------ used here to create a slice from the pointer
   |
   = help: please mark the function as unsafe

error: aborting due to 1 previous error

